<?xml version="1.0"?>
<package>
  <name>movo_object_search</name>
  <version>1.0.0</version>
  <description>
      Object search tutorial.
  </description>

  <maintainer email="yooncs8@csail.mit.edu">Yoonchang Sung</maintainer>
  <author></author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>gazebo_ros_pkgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  

  <export>
  </export>
</package>
